--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,7 @@ body {
     display: flex;
     justify-content: center;
     height: 100vh;
-    margin: 0;
-    margin-top: 2vh;
+    margin: 2vh 0 0;
 }
 
 nav {
