feat: add groupField modify and delete

--- a/views/group-detail.html
+++ b/views/group-detail.html
@@ -49,8 +49,7 @@
 
     <div class="col col-md-auto d-flex align-items-center justify-content-center">
       <img src="/images/ic_add_black.svg" class="ico mouse-hover" alt="Add field group" id="field-add" />
-      <img src="/images/ic_clear.svg" class="ico ms-1 mouse-hover" alt="Clear all data insert"
-           id="field-clean" />
+      <img src="/images/ic_clear.svg" class="ico ms-1 mouse-hover" alt="Clear all data insert" id="field-clean" />
     </div>
 
   </div>
@@ -74,8 +73,8 @@
       <input type="checkbox" value="" class="form-check-input" id="checkbox-is-hidden-{id}" disabled>
     </td>
     <td class="col-actions" id="col-actions-{id}">
-      <img src="/images/ic_edit.svg" class="ico mouse-hover" id="edit-{id}" alt="Edit field group" />
-      <img src="/images/ic_clear.svg" class="ico ms-1 mouse-hover" id="delete-{id}" alt="Delete field group" />
+      <img src="/images/ic_edit.svg" class="ico mouse-hover" data-type-id="{id}" id="edit-{id}" alt="Edit field group" />
+      <img src="/images/ic_clear.svg" class="ico ms-1 mouse-hover" data-type-id="{id}" id="delete-{id}" alt="Delete field group" />
     </td>
   </tr>
   </tbody>
