fix:  sending data to backend

--- a/views/group-detail.html
+++ b/views/group-detail.html
@@ -1,13 +1,13 @@
-<div class="input-group has-validation mb-3">
-    <span class="input-group-text">
+<div class="input-group mb-3">
+    <span class="input-group-text" id="group-title-elm">
       <img src="/images/ic_group.svg" alt="Password icon" class="ico" />
     </span>
   <div class="form-floating">
-    <input placeholder="Group title" class="form-control" id="group-title" placeholder="Group title"
+    <input class="form-control" id="group-title" placeholder="Group title"
            aria-describedby="addon-group-title" required>
     <label id="addon-group-title">Insert or modify the group name</label>
   </div>
-  <div class="invalid-feedback">
+  <div class="invalid-feedback justify-content-center">
     This field is required
   </div>
 </div>
@@ -19,7 +19,7 @@
 
 <p class="border-top mt-4 pt-1 d-flex justify-content-center">This session allows the addition of fields that will appear by default in the subgroups view.</p>
 
-<div class="container text-center pt-3">
+<div class="container pt-3">
   <div class="row">
 
     <div class="col no-padding">
