feat: add clean button in search field

--- a/views/home.html
+++ b/views/home.html
@@ -11,6 +11,7 @@
       <input type="text" class="form-control" id="search" placeholder="Search">
       <label for="search">Filter the data below</label>
     </div>
+    <button class="btn btn-outline-secondary" type="button" id="clean-search">Clean</button>
   </div>
 </div>
 
