--- a/views/home.html
+++ b/views/home.html
@@ -8,7 +8,7 @@
       <img class="ico" src="/images/ic_search.svg" alt="Search icon">
     </span>
     <div class="form-floating">
-      <input type="text" class="form-control" id="search" placeholder="Search">
+      <input autocomplete="off" type="text" class="form-control" id="search" placeholder="Search">
       <label for="search">Filter the data below</label>
     </div>
     <button class="btn btn-outline-secondary" type="button" id="clean-search">Clean</button>
