fix: 2 level group creation

--- a/views/group-detail.html
+++ b/views/group-detail.html
@@ -55,7 +55,7 @@
 </div>
 
 
-<table class="table mt-3">
+<table class="table table-hover mt-3">
   <thead>
   <tr>
     <th>Field title</th>
@@ -73,7 +73,7 @@
     </td>
     <td class="col-actions" id="col-actions-{id}">
       <img src="/images/ic_edit.svg" class="ico mouse-hover" data-type-id="{id}" id="edit-{id}" alt="Edit field group" />
-      <img src="/images/ic_clear.svg" class="ico ms-1 mouse-hover" data-type-id="{id}" id="delete-{id}" alt="Delete field group" />
+      <img src="/images/ic_delete.svg" class="ico ms-1 mouse-hover" data-type-id="{id}" id="delete-{id}" alt="Delete field group" />
     </td>
   </tr>
   </tbody>
