--- a/views/group-detail.html
+++ b/views/group-detail.html
@@ -3,7 +3,7 @@
       <img src="/images/ic_group.svg" alt="Password icon" class="ico" />
     </span>
   <div class="form-floating">
-    <input autocomplete="off" class="form-control" id="group-title" placeholder="Group title" aria-describedby="addon-group-title" required>
+    <input autocomplete="off" class="form-control" id="group-title" placeholder="Grcccccoup title" aria-describedby="addon-group-title" required>
     <label id="addon-group-title">Insert or modify the group name</label>
   </div>
   <div class="invalid-feedback justify-content-center">
@@ -25,11 +25,11 @@
 
       <div class="input-group has-validation mb-3">
       <span class="input-group-text">
-        <img src="/images/ic_field.svg" alt="Password icon" class="ico" />
+        <img src="/images/ic_field.svg" alt="Field icon" class="ico" />
       </span>
         <div class="form-floating" id="field-title-container">
           <input autocomplete="off" placeholder="Field title" class="form-control" id="field-title" aria-describedby="addon-field-title">
-          <label id="addon-field-title">Field name</label>
+          <label id="addon-field-title">Field title</label>
         </div>
         <div class="invalid-feedback" id="field-title-invalid">
           This field is required
