feat: contine the field-detail area

--- a/views/field-detail.html
+++ b/views/field-detail.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col no-padding">
       <div class="input-group has-validation mb-3">
-      <span class="input-group-text">
+      <span class="input-group-text" id="group-title-elm">
         <img src="/images/ic_title.svg" alt="Title icon" class="ico" />
       </span>
         <div class="form-floating" id="field-title-container">
@@ -35,7 +35,7 @@
         <div class="form-check">
           <input autocomplete="off" class="form-check-input" type="checkbox" value="" id="field-is-hidden">
           <label class="form-check-label" for="field-is-hidden">
-            Is hidden
+            Hide field value
           </label>
         </div>
       </div>
@@ -44,7 +44,7 @@
 
   <div class="row">
     <div class="col no-padding">
-      <button type="submit" class="btn btn-primary btn-full-width mt-2">Generate random value</button>
+      <button type="submit" class="btn btn-primary btn-full-width mt-2" id="field-generate-random">Generate random value</button>
     </div>
   </div>
 
