--- a/views/group-detail.html
+++ b/views/group-detail.html
@@ -41,7 +41,7 @@
       <div class="form-check">
         <input autocomplete="off" class="form-check-input" type="checkbox" value="" id="field-is-hidden">
         <label class="form-check-label" for="field-is-hidden">
-          Field is hidden
+          Hide field value
         </label>
       </div>
     </div>
