fix: some issue on field-detail

--- a/views/home.html
+++ b/views/home.html
@@ -15,8 +15,8 @@
   </div>
 </div>
 
-<div id="data-container" class="container">
-  <div id="row-{type}-{id}" class="row row-{type}">
+<div id="data-container" class="container border-top">
+  <div id="row-{type}-{id}" class="row row-{type} pt-2 pb-2 border-bottom">
     <div class="col-md-auto" data-type="{type}" data-type-id="{id}">
       <img class="ico" src="{icon}" alt="{icon-alt}">
     </div>
@@ -37,7 +37,6 @@
       <img class="ico" src="/images/ic_edit.svg" data-field="edit" data-type="{type}" data-type-id="{id}" alt="Edit {type}"/>
     </div>
   </div>
-  <div class="row row-separator"></div>
 </div>
 
 <link href="/views/home.css" rel="stylesheet">
