--- a/views/field-detail.html
+++ b/views/field-detail.html
@@ -2,12 +2,12 @@
   <div class="row">
     <div class="col no-padding">
       <div class="input-group has-validation mb-3">
-      <span class="input-group-text" id="group-title-elm">
+      <span class="input-group-text" id="field-title-elm">
         <img src="/images/ic_title.svg" alt="Title icon" class="ico" />
       </span>
         <div class="form-floating" id="field-title-container">
           <input autocomplete="off" placeholder="Field title" class="form-control" id="field-title" aria-describedby="addon-field-title">
-          <label id="addon-field-title">Field title</label>
+          <label id="addon-field-title">Title</label>
         </div>
         <div class="invalid-feedback" id="field-title-invalid">
           This field is required
@@ -23,7 +23,7 @@
       </span>
         <div class="form-floating" id="field-value-container">
           <input autocomplete="off" placeholder="Field value" class="form-control" id="field-value" aria-describedby="addon-field-value">
-          <label id="addon-field-value">Field name</label>
+          <label id="addon-field-value">value</label>
         </div>
       </div>
     </div>
