--- a/views/home.css
+++ b/views/home.css
@@ -20,5 +20,7 @@
     background-color: var(--secondary-active-color);
     height: 1px;
     width: auto;
-    margin: 4px 10px;
+    margin: 0px 10px;
+    padding-bottom: 4px;
+    padding-top: 4px;
 }
