fix: small issue

--- a/css/style.css
+++ b/css/style.css
@@ -182,3 +182,7 @@ img.ico-input {
     border: var(--bs-spinner-border-width) solid var(--primary-color);
     border-right-color: transparent;
 }
+
+.main-container > nav {
+    height: 44px;
+}
