--- a/css/menu.css
+++ b/css/menu.css
@@ -26,15 +26,18 @@
 .menu li > img {
     width: calc(12.1em - 16px);
     height: calc(12.1em - 16px);
+    margin-left: 8px;
 }
 
 
 .menu li h5 {
+    box-sizing: border-box;
     display: inline-block;
     white-space: nowrap;
     overflow: hidden;
-    color: var(--text-color);
+    text-align: center;
 }
+
 
 .menu li a {
     display: inline-block;
