--- a/views/login.css
+++ b/views/login.css
@@ -14,6 +14,10 @@ h2 {
     max-width: 700px;
 }
 
+.main-container > h1 {
+    height: 44px;
+}
+
 @media (min-width: 576px) {
     .input-group {
         width: 48vw;
