fix: import data

--- a/css/menu.css
+++ b/css/menu.css
@@ -27,6 +27,7 @@
     width: calc(12.1em - 16px);
     height: calc(12.1em - 16px);
     margin-left: 8px;
+    margin-right: 8px;
 }
 
 
@@ -36,6 +37,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-align: center;
+    width: calc(12.1em - 40px)
 }
 
 
