--- a/views/home.html
+++ b/views/home.html
@@ -2,17 +2,15 @@
   <textarea id="note" class="form-control" aria-label="Group note" readonly></textarea>
 </div>
 
-<div class="input-group mb-3">
-  <div class="input-group mb-3">
-    <span class="input-group-text">
-      <img class="ico" src="/images/ic_search.svg" alt="Search icon">
-    </span>
-    <div class="form-floating">
-      <input autocomplete="off" type="text" class="form-control" id="search" placeholder="Search">
-      <label for="search">Filter the data below</label>
-    </div>
-    <button class="btn btn-outline-secondary" type="button" id="clean-search">Clean</button>
+<div class="input-group mb-3 mt-3">
+  <span class="input-group-text">
+    <img class="ico" src="/images/ic_search.svg" alt="Search icon">
+  </span>
+  <div class="form-floating">
+    <input autocomplete="off" type="text" class="form-control" id="search" placeholder="Search">
+    <label for="search">Filter the data below</label>
   </div>
+  <button class="btn btn-outline-secondary" type="button" id="clean-search">Clean</button>
 </div>
 
 <div id="data-container" class="container border-top">
