feat: implement hidden text toggle functionality

--- a/views/home.html
+++ b/views/home.html
@@ -22,7 +22,7 @@
       {title}
     </div>
     <!--is-hidden
-    <div id="is-hidden-{type}-{id}" class="col-md-auto passwd" data-field="is-hidden" data-type="{type}" data-type-id="{id}">
+    <div id="is-hidden-{type}-{id}" class="col-md-auto passwd {is-hidden-class}" data-field="is-hidden" data-type="{type}" data-type-id="{id}">
       {is-hidden}
     </div>
     is-hidden-->
