--- a/views/home.css
+++ b/views/home.css
@@ -2,6 +2,17 @@
     text-align: end;
 }
 
+.hidden-text {
+    font-size: 0;
+    position: relative;
+}
+
+.hidden-text::before {
+    content: counter(chars, disc);
+    font-size: 1rem;
+    position: absolute;
+}
+
 .no-child {
     font-style: italic;
 }
@@ -24,3 +35,4 @@
     padding-bottom: 4px;
     padding-top: 4px;
 }
+
