feat: enhance note display functionality in home view

--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,11 @@
 <div id="note-container" class="input-group mb-3 collapse">
-  <textarea id="note" class="form-control" aria-label="Group note" readonly></textarea>
+  <span class="input-group-text">
+    <img class="ico" src="/images/ic_note.svg" alt="Note icon">
+  </span>
+  <div class="form-floating">
+    <textarea id="note" class="form-control" aria-label="Group note" readonly></textarea>
+    <label for="note" class="form-label">Note</label>
+  </div>
 </div>
 
 <div class="input-group mb-3 mt-3">
