--- a/views/field-detail.html
+++ b/views/field-detail.html
@@ -18,7 +18,7 @@
   <div class="row">
     <div class="col no-padding">
       <div class="input-group mb-3">
-      <span class="input-group-text">
+      <span class="input-group-text" id="field-value-elm">
         <img src="/images/ic_value.svg" alt="Text icon" class="ico" />
       </span>
         <div class="form-floating" id="field-value-container">
