fix: add min-height to main container for improved layout consistency

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ nav .btn:disabled {
     display: flex;
     flex-direction: column;
     position: relative;
+    min-height: 550px;
 }
 
 .btn-primary {
