feat: add cloeSideMenu() and toggleSIdeMenu()

--- a/views/home.html
+++ b/views/home.html
@@ -8,7 +8,7 @@
   </div>
 </div>
 
-<div class="input-group mb-3 mt-3">
+<div class="input-group mb-3">
   <span class="input-group-text">
     <img class="ico" src="/images/ic_search.svg" alt="Search icon">
   </span>
