fix: field verification in field-detail

--- a/views/field-detail.html
+++ b/views/field-detail.html
@@ -23,7 +23,10 @@
       </span>
         <div class="form-floating" id="field-value-container">
           <input autocomplete="off" placeholder="Field value" class="form-control" id="field-value" aria-describedby="addon-field-value">
-          <label id="addon-field-value">value</label>
+          <label id="addon-field-value">Value</label>
+        </div>
+        <div class="invalid-feedback" id="field-value-invalid">
+          This field is required
         </div>
       </div>
     </div>
