--- a/views/group-detail.html
+++ b/views/group-detail.html
@@ -21,13 +21,11 @@
   </div>
 </div>
 
-<p class="border-top mt-4 pt-1 d-flex justify-content-center">This session allows the addition of fields that will appear by default in the subgroups view.</p>
+<p id="group-field-area-tips" class="border-top mt-4 pt-1 d-flex justify-content-center">This session allows the addition of fields that will appear by default in the subgroups view.</p>
 
-<div class="container pt-3">
+<div id="group-field-area" class="container pt-3">
   <div class="row">
-
-    <div class="col no-padding">
-
+    <div  class="col no-padding">
       <div class="input-group has-validation mb-3">
       <span class="input-group-text">
         <img src="/images/ic_field.svg" alt="Field icon" class="ico" />
